--- a/routers/index.html
+++ b/routers/index.html
@@ -1,23 +1,20 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>自定义路由 route 2</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
-    <link rel="stylesheet" href="./css/app.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>复杂版-内联页面版，带缓存功能</title>
+    <link rel="stylesheet" href="../css/app.css">
 </head>
 
 <body>
     <div id="routerView" data-animationName="fade">
-        <!-- 主页 -->
         <div class="page" data-hash="/home">
             <div class="page-content">
                 <div id="home"></div>
             </div>
         </div>
-        <!-- 页面内容占位 -->
         <div class="page" data-hash="/list">
             <div class="page-content">
                 <div id="list"></div>
@@ -39,11 +36,11 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="./js/route.js"></script>
-    <script type="text/javascript">
+    <script src="route.js"></script>
+    <script>
         // 定义对象
         var config = {
-            routerViewId: 'routerView', // 路由切换的挂载点 id
+            routerViewId: '#routerView', // 路由切换的挂载点 id
             stackPages: true,           // 多级页面缓存
             animationName: "fade",      // 切换页面时的动画
             routes: [{
@@ -80,25 +77,22 @@
                 }
             }]
         }
-
         //初始化路由
         router.init(config)
-        router.beforeEach(function (transition) {
-            console.log('切换之 前 dosomething', transition)
-            setTimeout(function () {
-                //模拟切换之前延迟，比如说做个异步登录信息验证
-                transition.next()
-            }, 100)
-        })
-        router.afterEach(function (transition) {
-            console.log("切换之后 dosomething", transition)
-        })
-
+        // router.beforeEach(function (transition) {
+        //     console.log('切换之前dosomething', transition)
+        //     setTimeout(function () {
+        //         //模拟切换之前延迟，比如说做个异步登录信息验证
+        //         transition.next()
+        //     }, 100)
+        // })
+        // router.afterEach(function (transition) {
+        //     console.log("切换之后dosomething", transition)
+        // })
         // rem 单位适配
         var width = window.screen.width
         document.getElementsByTagName('html')[0].style.fontSize = width / 7.5 + 'px';
     </script>
 </body>
-<!-- https://biaochenxuying.github.io/route/index2.html#/home -->
 
 </html>
